# JAM_FLAMME_24

./: README.md  pyproject.toml
flamme_olympique_2024/: __init__.py  flame_algo.py  main.py  meat_cooking.py  recup_mic.py
src/: __init__.py  flame_algo.py  main.py  meat.py  meat_cooking.py  recup_mic.py
